# clairvoyance

./: .gitignore  .pre-commit-config.yaml  .prettierrc  INFO.md  Makefile  README.md  analyse.py  analyse_masterdb.py  build_win.py  collect.py  compose_cards.py  diag_support_bundles.json  diag_support_bundles.py  discover.py  dump_all_assets.py  dump_bundle_structure.py  dump_masterdb_to_json.py  events.json  extract_assets.py  extract_character_events.py  extract_story_text.py  gui.py  issues  log  log.txt  pyproject.toml  run.py
debug/: config.json  network.jsonl  story_choices.json
discovery/: analysis.md
js/: discover_scan.js  discover_trace.js  hook_dump.js  hook_events.js  hook_network.js  hook_races.js  hook_skills.js  il2cpp_helpers.js
lib/: attach.py  course_data.py  master_db.py  race_processor.py  race_sim_parser.py  session.py  session_reader.py
masterdb_readable/: _index.json  announce_character.json  announce_data.json  announce_event.json  announce_support_card.json  audience_data.json  audience_dress_color_set.json  audience_hair_color_set.json  audience_impostor.json  audience_impostor_color_set.json  audience_impostor_lottery.json  audio_cuesheet.json  audio_ignored_cue_on_highspeed.json  audio_story_effect.json  available_skill_set.json  background_data.json  background_offset_data.json  banner_data.json  campaign_chara_story_schedule.json  campaign_data.json  campaign_present_bonus_detail.json  campaign_single_race_add_data.json  campaign_single_race_add_reward.json  card_data.json  card_rarity_data.json  card_talent_hint_upgrade.json  card_talent_upgrade.json  challenge_match_boss_npc.json  challenge_match_data.json  challenge_match_race.json  challenge_match_race_npc.json  challenge_match_raw_point.json  challenge_match_retry_bonus.json  champions_bgm.json  champions_entry_reward.json  champions_evaluation_rate.json  champions_news_chara_comment.json  champions_news_chara_detail.json  champions_news_chara_wininfo.json  champions_news_race.json  (+296 more)
sessions/2026-04-09T12-30-05_run/: manifest.json  network.jsonl  race.jsonl
sessions/2026-04-09T12-54-13_run/: manifest.json  network.jsonl  race.jsonl
sessions/2026-04-09T13-34-17_run/: manifest.json  network.jsonl  race.jsonl
sessions/2026-04-09T14-21-46_run/: manifest.json
sessions/2026-04-09T14-22-57_run/: manifest.json  network.jsonl  race.jsonl
sessions/2026-04-09T14-42-45_run/: manifest.json  network.jsonl  race.jsonl
sessions/2026-04-09T17-18-14_1/: network.jsonl  (+1 more)
static/: style.css
templates/: home.html  layout.html  masterdata.html  race.html  replay.html  session.html  setup.html
(+3 files in other folders)
